# src/features/search/controller.ts
@@ -11,18 +11,40 @@ export default class SearchController {
 
     async searchMessage(req:AuthorizedRequest, res:Response, next:NextFunction){
         try {
-            let page = 0;
+            let page = 1;
             let limit = 20;
+            
             if(req.query.page){
                 page = Number(req.query.page);
             }
             if(req.query.limit){
-                limit = Number(req.query.page);
+                limit = Number(req.query.limit);
             }
+            
             const searchKey = req.query.searchKey as string;
             const userId = req.user.userId;
             const result = await this.searchRepository.searchMessage(userId, searchKey, page, limit);
             res.status(200).json({userId, searchResult: result});
+        } catch (error) {
+            next(error);
+        }
+    }
+
+    async searchUser(req:AuthorizedRequest, res:Response, next:NextFunction){
+        try {
+            let page = 1;
+            let limit = 20;
+            
+            if(req.query.page){
+                page = Number(req.query.page);
+            }
+            if(req.query.limit){
+                limit = Number(req.query.limit);
+            }
+            
+            const searchKey = req.query.searchKey as string;
+            const result = await this.searchRepository.searchUser(searchKey, page, limit);
+            res.status(200).json({searchResult: result});
         } catch (error) {
             next(error);
         }
